Enhance Mock Data Generation and Order Management
- Introduced a comprehensive base layer data model in spec.md, detailing structures for SOD holdings, prices, instruments, intraday cash, and orders.
- Updated Order class to support builder pattern with toBuilder option for better immutability.
- Enhanced OrderGenerator to manage active orders, allowing for realistic order lifecycle simulation including creation, updates, and terminal states (FILLED, CANCELLED, REJECTED).
- Improved logging for order generation and updates, providing better traceability of order states and active order counts.
- Removed obsolete methods related to order status and filled quantity generation, streamlining the order update process.