@@ -11,14 +11,19 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Collectors;
 
 /**
  * Generates realistic trading orders and simulates their lifecycle.
  * Creates new orders periodically and updates existing orders through their states.
+ * Orders progress through: CREATED -> PARTIALLY_FILLED (with incremental fills) -> FILLED
+ * Some orders may be CANCELLED or REJECTED.
  */
 @Service
 @Slf4j
@@ -30,6 +35,9 @@ public class OrderGenerator {
     
     // Control flag for enabling/disabling generation
     private final AtomicBoolean generationEnabled = new AtomicBoolean(true);
+    
+    // Track active orders that can be updated
+    private final Map<String, Order> activeOrders = new ConcurrentHashMap<>();
     
     private static final String[] ORDER_TYPES = {"MARKET", "LIMIT", "STOP"};
     private static final String[] VENUES = {"NYSE", "NASDAQ", "LSE", "EURONEXT"};
@@ -46,14 +54,14 @@ public class OrderGenerator {
         // Generate 1-3 new orders per cycle
         int numOrders = random.nextInt(3) + 1;
         
-        List<CompletableFuture<Void>> futures = range(numOrders)
+        List<CompletableFuture<Void>> futures = java.util.stream.IntStream.range(0, numOrders)
                 .mapToObj(i -> generateNewOrder())
-                .toList();
+                .collect(Collectors.toList());
         
         CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .whenComplete((result, ex) -> {
                     if (ex == null) {
-                        log.debug("Generated {} new orders", numOrders);
+                        log.debug("Generated {} new orders. Active orders: {}", numOrders, activeOrders.size());
                     } else {
                         log.error("Failed to generate orders: {}", ex.getMessage());
                     }
@@ -84,7 +92,11 @@ public class OrderGenerator {
                 .orderPrice(generateOrderPrice())
                 .orderType(ORDER_TYPES[random.nextInt(ORDER_TYPES.length)])
                 .venue(VENUES[random.nextInt(VENUES.length)])
+                .timestamp(now)
                 .build();
+        
+        // Add to active orders for future updates
+        activeOrders.put(order.getOrderId(), order);
         
         log.debug("Creating new order: {} for {} shares of {} (account: {})", 
                 order.getOrderId(), order.getOrderQuantity(), instrumentId, accountId);
@@ -95,7 +107,7 @@ public class OrderGenerator {
     
     /**
      * Simulate order fills and updates every 10 seconds
-     * In a real system, this would be driven by market events
+     * Updates existing orders with incremental fills
      */
     @Scheduled(fixedRate = 10000) // 10 seconds
     public void simulateOrderUpdates() {
@@ -103,49 +115,90 @@ public class OrderGenerator {
             return; // Skip generation if disabled
         }
         
-        // For demonstration, we'll simulate a few order updates
-        // In practice, we'd track active orders and update them
+        // Get list of orders that can be updated (not FILLED, CANCELLED, or REJECTED)
+        List<Order> updatableOrders = activeOrders.values().stream()
+                .filter(order -> order.getOrderStatus() == OrderStatus.CREATED || 
+                               order.getOrderStatus() == OrderStatus.PARTIALLY_FILLED)
+                .collect(Collectors.toList());
         
-        // Generate 0-2 order updates per cycle
-        int numUpdates = random.nextInt(3);
+        if (updatableOrders.isEmpty()) {
+            log.debug("No active orders to update");
+            return;
+        }
+        
+        // Update 1-3 random orders (or all if fewer than 3)
+        int numUpdates = Math.min(random.nextInt(3) + 1, updatableOrders.size());
         
         for (int i = 0; i < numUpdates; i++) {
-            simulateOrderUpdate();
+            Order orderToUpdate = updatableOrders.get(random.nextInt(updatableOrders.size()));
+            simulateOrderUpdate(orderToUpdate);
         }
     }
     
     /**
-     * Simulate an order update (fill, partial fill, or cancellation)
+     * Simulate an order update (incremental fill, completion, or cancellation)
      */
-    private void simulateOrderUpdate() {
-        // Create a mock order update for demonstration
-        // In practice, we'd maintain a state of active orders
-        
+    private void simulateOrderUpdate(Order existingOrder) {
         LocalDateTime now = LocalDateTime.now();
-        List<String> accountIds = StaticDataGenerator.getAccountIds();
-        List<String> instrumentIds = StaticDataGenerator.getEquityInstrumentIds();
         
-        String accountId = accountIds.get(random.nextInt(accountIds.size()));
-        String instrumentId = instrumentIds.get(random.nextInt(instrumentIds.size()));
-        BigDecimal orderQuantity = generateOrderQuantity();
+        // Create updated order with same ID but new state
+        Order.OrderBuilder updatedOrderBuilder = existingOrder.toBuilder()
+                .timestamp(now);
         
-        Order updatedOrder = Order.builder()
-                .orderId(generateOrderId())
-                .instrumentId(instrumentId)
-                .accountId(accountId)
-                .date(now)
-                .orderQuantity(orderQuantity)
-                .filledQuantity(generateFilledQuantity(orderQuantity))
-                .orderStatus(generateUpdatedOrderStatus())
-                .orderPrice(generateOrderPrice())
-                .orderType(ORDER_TYPES[random.nextInt(ORDER_TYPES.length)])
-                .venue(VENUES[random.nextInt(VENUES.length)])
-                .build();
+        // Determine what type of update to make
+        double updateType = random.nextDouble();
         
-        log.debug("Updating order: {} - status: {}, filled: {}/{}", 
-                updatedOrder.getOrderId(), updatedOrder.getOrderStatus(),
-                updatedOrder.getFilledQuantity(), updatedOrder.getOrderQuantity());
+        if (updateType < 0.05) {
+            // 5% chance to cancel the order
+            updatedOrderBuilder.orderStatus(OrderStatus.CANCELLED);
+            log.debug("Cancelling order: {}", existingOrder.getOrderId());
+        } else if (updateType < 0.08) {
+            // 3% chance to reject the order
+            updatedOrderBuilder.orderStatus(OrderStatus.REJECTED);
+            log.debug("Rejecting order: {}", existingOrder.getOrderId());
+        } else {
+            // 92% chance for a fill update
+            BigDecimal currentFilled = existingOrder.getFilledQuantity();
+            BigDecimal orderQuantity = existingOrder.getOrderQuantity().abs();
+            BigDecimal remaining = orderQuantity.subtract(currentFilled);
+            
+            if (remaining.compareTo(BigDecimal.ZERO) > 0) {
+                // Increment filled quantity by 1 (or remaining if less than 1)
+                BigDecimal fillIncrement = remaining.compareTo(BigDecimal.ONE) >= 0 ? 
+                    BigDecimal.ONE : remaining;
+                BigDecimal newFilledQuantity = currentFilled.add(fillIncrement);
+                
+                updatedOrderBuilder.filledQuantity(newFilledQuantity);
+                
+                // Check if order is now completely filled
+                if (newFilledQuantity.compareTo(orderQuantity) == 0) {
+                    updatedOrderBuilder.orderStatus(OrderStatus.FILLED);
+                    log.debug("Completing order: {} - filled: {}/{}", 
+                            existingOrder.getOrderId(), newFilledQuantity, orderQuantity);
+                } else {
+                    updatedOrderBuilder.orderStatus(OrderStatus.PARTIALLY_FILLED);
+                    log.debug("Partially filling order: {} - filled: {}/{}", 
+                            existingOrder.getOrderId(), newFilledQuantity, orderQuantity);
+                }
+            }
+        }
         
+        Order updatedOrder = updatedOrderBuilder.build();
+        
+        // Update the active orders map
+        if (updatedOrder.getOrderStatus() == OrderStatus.FILLED ||
+            updatedOrder.getOrderStatus() == OrderStatus.CANCELLED ||
+            updatedOrder.getOrderStatus() == OrderStatus.REJECTED) {
+            // Remove from active orders as it's now terminal
+            activeOrders.remove(updatedOrder.getOrderId());
+            log.debug("Order {} reached terminal state: {}. Active orders: {}", 
+                    updatedOrder.getOrderId(), updatedOrder.getOrderStatus(), activeOrders.size());
+        } else {
+            // Update the order in active orders
+            activeOrders.put(updatedOrder.getOrderId(), updatedOrder);
+        }
+        
+        // Publish the updated order
         dataPublisher.publishOrder(updatedOrder);
     }
     
@@ -157,16 +210,16 @@ public class OrderGenerator {
     }
     
     /**
-     * Generate realistic order quantities
+     * Generate realistic order quantities (smaller quantities for more fills)
      */
     private BigDecimal generateOrderQuantity() {
-        // Mix of small and large orders
-        if (random.nextDouble() < 0.7) {
-            // 70% small orders (1-100 shares)
-            return BigDecimal.valueOf(random.nextInt(100) + 1);
+        // Favor smaller orders so we can see more fill progression
+        if (random.nextDouble() < 0.8) {
+            // 80% small orders (5-25 shares) - more fills to observe
+            return BigDecimal.valueOf(random.nextInt(21) + 5);
         } else {
-            // 30% larger orders (100-1000 shares)
-            return BigDecimal.valueOf(random.nextInt(900) + 100);
+            // 20% larger orders (25-100 shares)
+            return BigDecimal.valueOf(random.nextInt(76) + 25);
         }
     }
     
@@ -177,50 +230,6 @@ public class OrderGenerator {
         // Generate price between $10 and $500
         double price = 10 + (random.nextDouble() * 490);
         return BigDecimal.valueOf(price).setScale(2, BigDecimal.ROUND_HALF_UP);
-    }
-    
-    /**
-     * Generate filled quantity for order updates
-     */
-    private BigDecimal generateFilledQuantity(BigDecimal orderQuantity) {
-        double fillRatio = random.nextDouble();
-        
-        // 30% no fill, 40% partial fill, 30% complete fill
-        if (fillRatio < 0.3) {
-            return BigDecimal.ZERO;
-        } else if (fillRatio < 0.7) {
-            // Partial fill (10-90% of order)
-            double partialRatio = 0.1 + (random.nextDouble() * 0.8);
-            return orderQuantity.multiply(BigDecimal.valueOf(partialRatio))
-                    .setScale(0, BigDecimal.ROUND_DOWN);
-        } else {
-            // Complete fill
-            return orderQuantity;
-        }
-    }
-    
-    /**
-     * Generate order status for updates
-     */
-    private OrderStatus generateUpdatedOrderStatus() {
-        double statusRandom = random.nextDouble();
-        
-        if (statusRandom < 0.1) {
-            return OrderStatus.CANCELLED;
-        } else if (statusRandom < 0.15) {
-            return OrderStatus.REJECTED;
-        } else if (statusRandom < 0.5) {
-            return OrderStatus.PARTIALLY_FILLED;
-        } else {
-            return OrderStatus.FILLED;
-        }
-    }
-    
-    /**
-     * Helper method to create a stream of integers
-     */
-    private java.util.stream.IntStream range(int count) {
-        return java.util.stream.IntStream.range(0, count);
     }
     
     /**
@@ -253,5 +262,20 @@ public class OrderGenerator {
      */
     public boolean isGenerationEnabled() {
         return generationEnabled.get();
+    }
+    
+    /**
+     * Get current active orders count (for monitoring)
+     */
+    public int getActiveOrdersCount() {
+        return activeOrders.size();
+    }
+    
+    /**
+     * Clear all active orders (for testing/reset)
+     */
+    public void clearActiveOrders() {
+        activeOrders.clear();
+        log.info("Cleared all active orders");
     }
 } 
